<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:contentDescription="@string/app_name"
        app:title="@string/app_name"
        app:titleTextColor="@color/black"
        app:titleTextAppearance="@style/TextAppearance.Netra.ToolbarTitle"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardVoice"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginVertical="8dp"
            app:cardBackgroundColor="@color/section_voice"
            app:strokeColor="@color/section_voice"
            app:strokeWidth="0dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|start"
                android:padding="16dp"
                android:text="@string/section_voice_tools"
                android:textColor="@color/on_section_text"
                android:textSize="20sp"/>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardVision"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginVertical="8dp"
            app:cardBackgroundColor="@color/section_vision"
            app:strokeColor="@color/section_vision"
            app:strokeWidth="0dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|start"
                android:padding="16dp"
                android:text="@string/section_vision_tools"
                android:textColor="@color/on_section_text"
                android:textSize="20sp"/>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardCommunication"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginVertical="8dp"
            app:cardBackgroundColor="@color/section_communication"
            app:strokeColor="@color/section_communication"
            app:strokeWidth="0dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|start"
                android:padding="16dp"
                android:text="@string/section_communication"
                android:textColor="@color/on_section_text"
                android:textSize="20sp"/>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardEmergency"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginVertical="8dp"
            app:cardBackgroundColor="@color/section_emergency"
            app:strokeColor="@color/section_emergency"
            app:strokeWidth="0dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|start"
                android:padding="16dp"
                android:text="@string/section_emergency"
                android:textColor="@color/on_section_text"
                android:textSize="20sp"/>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardLearning"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginVertical="8dp"
            app:cardBackgroundColor="@color/section_learning"
            app:strokeColor="@color/section_learning"
            app:strokeWidth="0dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|start"
                android:padding="16dp"
                android:text="@string/section_learning"
                android:textColor="@color/on_section_text"
                android:textSize="20sp"/>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardEntertainment"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginVertical="8dp"
            app:cardBackgroundColor="@color/section_entertainment"
            app:strokeColor="@color/section_entertainment"
            app:strokeWidth="0dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|start"
                android:padding="16dp"
                android:text="@string/section_entertainment"
                android:textColor="@color/on_section_text"
                android:textSize="20sp"/>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardGovSupport"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginVertical="8dp"
            app:cardBackgroundColor="@color/section_govsupport"
            app:strokeColor="@color/section_govsupport"
            app:strokeWidth="0dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|start"
                android:padding="16dp"
                android:text="@string/section_gov_support"
                android:textColor="@color/on_section_text"
                android:textSize="20sp"/>
        </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
