<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        app:titleTextColor="@color/black"
        app:titleTextAppearance="@style/TextAppearance.Netra.ToolbarTitle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_settings_title"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_pitch"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"/>
        <SeekBar
            android:id="@+id/seekPitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/calc_pitch"/>
        <TextView
            android:id="@+id/tvPitchValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="1.0x"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_speed"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"/>
        <SeekBar
            android:id="@+id/seekSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/calc_speed"/>
        <TextView
            android:id="@+id/tvSpeedValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="1.0x"/>

    </LinearLayout>
</LinearLayout>
